--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
   },
   "dependencies": {
     "@docusaurus/core": "^3.6.0",
-    "@docusaurus/faster": "^3.6.0",
     "@docusaurus/plugin-content-blog": "^3.6.0",
     "@docusaurus/plugin-content-docs": "^3.6.0",
     "@docusaurus/plugin-content-pages": "^3.6.0",
     "@docusaurus/preset-classic": "^3.6.0",
-    "@docusaurus/theme-search-algolia": "^3.5.2",
-    "@mdx-js/react": "^3.0.0",
+    "@docusaurus/theme-search-algolia": "^3.6.0",
+    "@mdx-js/react": "^2.3.0",
     "clsx": "^2.0.0",
     "particles.js": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
@@ -29,8 +28,8 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.5.2",
-    "@docusaurus/types": "3.5.2"
+    "@docusaurus/module-type-aliases": "^3.6.0",
+    "@docusaurus/types": "^3.6.0"
   },
   "browserslist": {
     "production": [
