--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
     "@docusaurus/module-type-aliases": "^3.6.1",
     "@docusaurus/types": "^3.6.0"
   },
